--- a/dashboard.html
+++ b/dashboard.html
@@ -11,25 +11,7 @@
 </head>
 <body>
 
-<div class="sidebar" id="sidebar">
 
-  <h3 class="text-center mt-3"></h3>
-  <div id="logoDiv">
-    <div class="close-btn" id="closeSidebar">&times;</div>
-    <img src="Asserts/greenshadow.webp" id="logo" ;
-         width="70px" style=" ">
-  </div>
-
-  <div id="navLinksDiv">
-    <a href="#" id="navDashboard">Dashboard</a>
-    <a href="#" id="navCrops">Crops</a>
-    <a href="#" id="navFields">Fields</a>
-    <a href="#" id="navLogs">Logs</a>
-    <a href="#" id="navEquipment">Equipment</a>
-    <a href="#" id="navStaff">Staff</a>
-    <a href="#" id="navVehicle">Vehicles</a>
-    <a href="#" id="navUser">User</a>
-  </div>
 
 </div><!-- Sidebar and Dashboard Layout -->
 <div class="container-fluid">
@@ -37,7 +19,7 @@
   <div class="sidebar" id="sidebar">
     <div id="logoDiv">
       <div class="close-btn" id="closeSidebar">&times;</div>
-      <img src="assets/images/Green_and_White_Modern_Simple_Herbal_Shop_Logo-removebg-preview.png" id="logo" width="70px">
+      <img src="Asserts/greenshadow.webp" id="logo" width="70px">
     </div>
 
     <div id="navLinksDiv">
