--- a/dashboard.html
+++ b/dashboard.html
@@ -1,45 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--  <meta charset="UTF-8">-->
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-<!--  <title>Green Shadow Farm Dashboard</title>-->
-<!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">-->
-<!--  <link rel="stylesheet" href="css/dashboard.css">-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="d-flex" id="wrapper">-->
-<!--  &lt;!&ndash; Sidebar &ndash;&gt;-->
-<!--  <nav class="bg-light border-end" id="sidebar-wrapper">-->
-<!--    <div class="sidebar-heading text-center py-4 text-success fw-bold fs-4">Green Shadow</div>-->
-<!--    <div class="list-group list-group-flush">-->
-<!--      <a href="#dashboardContent" class="list-group-item list-group-item-action" id="navDashboard">Dashboard</a>-->
-<!--      <a href="#cropsSection" class="list-group-item list-group-item-action" id="navCrops">Crops</a>-->
-<!--      <a href="#fieldsSection" class="list-group-item list-group-item-action" id="navFields">Fields</a>-->
-<!--      <a href="#logsSection" class="list-group-item list-group-item-action" id="navLogs">Logs</a>-->
-<!--      <a href="#equipmentSection" class="list-group-item list-group-item-action" id="navEquipment">Equipment</a>-->
-<!--      <a href="#staffSection" class="list-group-item list-group-item-action" id="navStaff">Staff</a>-->
-<!--      <a href="#vehiclesSection" class="list-group-item list-group-item-action" id="navVehicles">Vehicles</a>-->
-<!--      <a href="#userSection" class="list-group-item list-group-item-action" id="navUser">User</a>-->
-<!--    </div>-->
-<!--  </nav>-->
-
-<!--  &lt;!&ndash; Page Content &ndash;&gt;-->
-<!--  <div id="page-content-wrapper" class="p-4">-->
-<!--    <div id="dashboardContent" class="content-section">Dashboard Content</div>-->
-<!--    <div id="cropsSection" class="content-section">Crops Management</div>-->
-<!--    <div id="fieldsSection" class="content-section">Field Overview</div>-->
-<!--    <div id="logsSection" class="content-section">Logs Management</div>-->
-<!--    <div id="equipmentSection" class="content-section">Equipment Overview</div>-->
-<!--    <div id="staffSection" class="content-section">Staff Management</div>-->
-<!--    <div id="vehiclesSection" class="content-section">Vehicles Tracking</div>-->
-<!--    <div id="userSection" class="content-section">User Settings</div>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>-->
-<!--<script src="controller/dashboardController.js"></script>-->
-<!--</body>-->
-<!--</html>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,6 +6,7 @@
   <title>Green Shadow Farm Dashboard</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet"href="css/homePage.css">
 </head>
 <body>
 <div class="d-flex" id="wrapper">
@@ -87,7 +46,64 @@
 
   <!-- Page Content -->
   <div id="page-content-wrapper" class="p-4">
-    <div id="dashboardContent" class="content-section">Dashboard Content</div>
+    <div id="dashboardContent" class="content-section">
+      <!-- Dashboard Header -->
+      <div class="mt-4 mb-3">
+        <h2 class="text-success text-center">Welcome to Green Shadow Farm Dashboard</h2>
+      </div>
+
+      <!-- Statistics Section -->
+      <div class="row text-center">
+        <!-- User Count -->
+        <div class="col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Live Users</h5>
+              <p class="display-4" id="liveUserCount">0</p>
+            </div>
+          </div>
+        </div>
+        <!-- Member Count -->
+        <div class="col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Members</h5>
+              <p class="display-4" id="memberCount">0</p>
+            </div>
+          </div>
+        </div>
+        <!-- Add Buttons -->
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6 mb-2">
+              <button class="btn btn-success w-100" id="addCropBtn">Add Crop</button>
+            </div>
+            <div class="col-md-6 mb-2">
+              <button class="btn btn-success w-100" id="addFieldBtn">Add Field</button>
+            </div>
+            <div class="col-md-6 mb-2">
+              <button class="btn btn-success w-100" id="addStaffBtn">Add Staff</button>
+            </div>
+            <div class="col-md-6 mb-2">
+              <button class="btn btn-success w-100" id="addUserBtn">Add User</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bar Chart Section -->
+      <div class="row mt-4">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title text-center">Crop Statistics</h5>
+              <canvas id="cropChart"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
     <div id="cropsSection" class="content-section">Crops Management</div>
     <div id="fieldsSection" class="content-section">Field Overview</div>
     <div id="logsSection" class="content-section">Logs Management</div>
