--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,8 @@
   <title>Green Shadow Farm Dashboard</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/dashboard.css">
-  <link rel="stylesheet"href="css/homePage.css">
+  <link rel="stylesheet" href="css/homePage.css">
+  <link rel="stylesheet" href="css/crop.css">
 </head>
 <body>
 <div class="d-flex" id="wrapper">
