--- a/dashboard.html
+++ b/dashboard.html
@@ -157,6 +157,10 @@
                   <label for="CropImage" class="form-label">Image</label>
                   <input type="file" class="form-control" id="CropImage" required>
                 </div>
+                <div class="mb-3">
+                  <label for="field" class="form-label">Image</label>
+                  <input type="text" class="form-control" id="field" required>
+                </div>
                 <button type="submit" class="btn btn-primary">Save Crop</button>
               </form>
             </div>
