--- a/dashboard.html
+++ b/dashboard.html
@@ -183,6 +183,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="controller/dashboardController.js"></script>
 <script src="controller/cropController.js"></script>
+  <script src="Ajax/cropAjax.js"></script>
 
 </body>
 </html>
