--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/homePage.css">
   <link rel="stylesheet" href="css/crop.css">
   <link rel="stylesheet" href="css/field.css">
+  <link rel="stylesheet" href="css/equipment.css">
+  <link rel="stylesheet" href="css/logs.css">
 
 </head>
 <body>
@@ -265,7 +267,77 @@
 
   </div>
     <div id="logsSection" class="content-section">Logs Management</div>
-    <div id="equipmentSection" class="content-section">Equipment Overview</div>
+    <div id="equipmentSection" class="content-section">
+        <div class="section">
+          <h2 class="text-center my-4">Manage Equipment</h2>
+
+          <!-- Add Equipment Button -->
+          <div class="d-flex justify-content-center mb-4">
+            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#equipmentModal">Add Equipment</button>
+          </div>
+
+          <!-- Equipment Table -->
+          <table class="table table-bordered" id="equipmentTable">
+            <thead class="table-success">
+            <tr>
+              <th>ID</th>
+              <th>Name</th>
+              <th>Type</th>
+              <th>Status</th>
+              <th>Available Count</th>
+              <th>Field</th>
+              <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <!-- Rows will be added dynamically -->
+            </tbody>
+          </table>
+
+          <!-- Popup Modal for Equipment Details -->
+          <div class="modal fade" id="equipmentModal" tabindex="-1" aria-labelledby="equipmentModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="equipmentModalLabel">Add Equipment</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form id="equipmentForm">
+                    <div class="mb-3">
+                      <label for="equipmentName" class="form-label">Name</label>
+                      <input type="text" class="form-control" id="equipmentName" required>
+                    </div>
+                    <div class="mb-3">
+                      <label for="equipmentType" class="form-label">Type</label>
+                      <input type="text" class="form-control" id="equipmentType" required>
+                    </div>
+                    <div class="mb-3">
+                      <label for="equipmentStatus" class="form-label">Status</label>
+                      <select class="form-control" id="equipmentStatus" required>
+                        <option value="Available">Available</option>
+                        <option value="Under Maintenance">Under Maintenance</option>
+                        <option value="Out of Service">Out of Service</option>
+                      </select>
+                    </div>
+                    <div class="mb-3">
+                      <label for="equipmentCount" class="form-label">Available Count</label>
+                      <input type="number" class="form-control" id="equipmentCount" required>
+                    </div>
+                    <div class="mb-3">
+                      <label for="equipmentField" class="form-label">Field</label>
+                      <input type="text" class="form-control" id="equipmentField" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save Equipment</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
     <div id="staffSection" class="content-section">Staff Management</div>
     <div id="vehiclesSection" class="content-section">Vehicles Tracking</div>
     <div id="userSection" class="content-section">User Settings</div>
@@ -276,6 +348,8 @@
 <script src="controller/dashboardController.js"></script>
 <script src="controller/cropController.js"></script>
 <script src="controller/fieldController.js"></script>
+<script src="controller/logsController.js"></script>
+<script src="controller/equipmentController.js"></script>
 
 </body>
 </html>
