--- a/dashboard.html
+++ b/dashboard.html
@@ -343,6 +343,8 @@
       </div>
 
     </div>
+
+    </div>
     <div id="equipmentSection" class="content-section">
         <div class="section">
           <h2 class="text-center my-4">Manage Equipment</h2>
